<resources>
    <string name="app_name">Grocery App</string>
    <string name="welcome_label">Welcome</string>
    <string name="welcome_label2">to our store</string>
    <string name="get_started_btn">Get Started</string>
    <string name="welcome_desc">Get your groceries in as fast as one hour</string>
    <string name="location_label">Select Your location</string>
    <string name="signup_heading">Sign up</string>
    <string name="credentials_label">Enter your credentials to continue</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="number_label">Mobile number</string>
    <string name="number_hint">Enter number</string>
    <string name="username_hint">Enter username</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="already_acc_hint">Already have an account?<font color="#53B175"> Signin</font></string>
    <string name="TNC_label">By continuing you agree to our <font color="#53B175">Terms of Services</font> and <font color="#53B175">Privacy Policy</font></string>
    <string name="login_heading">Loging</string>
    <string name="email_pass_label">Enter your email and password</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="login_btn">Log in</string>
    <string name="zone_label">Your Zone</string>
    <string name="zone_hint">Your Zone</string>
    <string name="location_desc">Switch on your location to stay in tune with whats happening in your area</string>
    <string name="dont_account">Dont have an account?<font color="#53B175"> Signup</font> </string>
    <string name="location_btn">Fetch Location</string>
    <string name="submit_btn">Submit</string>
    <string name="email_lbl">Or connect with email</string>
    <string name="area_label">Your area</string>
    <string name="signin_number">Sign in with mobile</string>
    <string name="google_btn">Continue with Google</string>
    <string name="facebook_btn">Continue with Facebook</string>
    <string name="newUser_label">New user? Create account</string>
    <string name="enter_num_label">Enter your mobile number</string>
    <string name="enter_4digit_label">Enter your 4-digit code</string>
    <string name="code_txt">Code</string>
    <string name="signin_heading_one">Get your groceries</string>
    <string name="signin_heading_two">with nectar</string>
    <string name="product_name">Organic Bananas</string>
    <string name="product_qty">7pcs, Priceg</string>
    <string name="INR">\u20B9</string>
    <string name="product_price">\u20B9 120</string>
    <string name="offer_label">Exclusive Offer</string>
    <string name="see_all_label">See all</string>
    <string name="add_basket_btn">Add to Basket</string>
    <string name="product_detail_label">Product detail</string>
    <string name="product_details">Apples are nutritious. Apples may be good for weight loss. apples may be good for your heart. As part of a healtful and varied diet.</string>
    <string name="reset_pass_label">Reset password</string>
    <string name="create_pass_label">Confirm password</string>
    <string name="reset_btn">Reset</string>
    <string name="apply_filter_btn">Apply Filter</string>
    <string name="find_products">Find products</string>
    <string name="my_cart_label">My Cart</string>
    <string name="product_name_cart">Bell Pepper Red</string>
    <string name="favorites_label">Favorite</string>
    <string name="addCart_label">Add All To Cart</string>
    <string name="checkout_label">Checkout</string>
    <string name="deleivery_label">Delivery</string>
    <string name="payment_label">Payment</string>
    <string name="select_method_label">Select Method</string>
    <string name="promo_label">Promo Code</string>
    <string name="discount_label">Pick Discount</string>
    <string name="total_bill_label">Total Cost</string>
    <string name="place_order_btn">Place Order</string>
    <string name="TandC">By Placing an order you agree to our <font color="#181725">Terms</font> and<font color="#181725"> Conditions</font></string>
    <string name="order_accepted_label">Your Order has been accepted</string>
    <string name="order_body">Your items has been placed and is on</string>
    <string name="order_body_2">its way to being processed</string>
    <string name="track_order_btn">Track Order</string>
    <string name="back_home_txt">Back to home</string>
    <string name="review_txt">Review</string>
    <string name="nutrition_txt">Nutrition</string>
    <string name="nutrition_qty_txt">100gr</string>
    <string name="location_txt">Dhaka, banaras</string>
    <string name="resend_code_txt">Resend Code</string>
    <string name="checkout_btn">Go to Checkout</string>
    <string name="categories_heading">Categories</string>
    <string name="category_name_txt">Fresh fruits and vegetables</string>
    <string name="category_name">Pulses</string>
    <string name="nutrition_desc">20g protein, 2g fats, molecular acid rich in phosphate</string>
    <string name="username">Afsar Hossen</string>
    <string name="useremail">afasr097@gmail.com</string>
    <string name="order_label">Orders</string>
    <string name="my_detail_label">My Details</string>
    <string name="deliver_label">Delivery Address</string>
    <string name="payment_method_label">Payment Methods</string>
    <string name="notification_label">Notifications</string>
    <string name="help_label">Help</string>
    <string name="about_label">About</string>
    <string name="logout_btn">Log Out</string>
    <string name="order_fail_label">Oops! Order Failed</string>
    <string name="something_wrong_label">Something went wrong.</string>
    <string name="try_again_btn">Please Try Again</string>
    <string name="review_btn">Submit Review</string>
    <string name="rating_heading">Item\'s Rating</string>
    <string name="review_label">Please share your opinion about the product</string>
    <string name="proceed_btn">Proceed</string>
    <string name="payBtn">Pay</string>
    <string name="cardNum_label">Card Number</string>
    <string name="validity_label">Valid through</string>
    <string name="cvv_label">CVV</string>
    <string name="cardHolder_label">Card holder name</string>
    <string name="BankName_label">State Bank of India</string>
    <string name="payment_type">Debit Card/ ATM</string>
    <string name="UPI_heading">Enter UPI ID</string>
    <string name="guidelines_debitCard">This card will be securely saved for a faster payment experience .CVV number will not be saved.</string>
    <string name="wallet_type">Mobikwik| ZIP (Paylater)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>