<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingHorizontal="12dp"
    tools:context=".authentication.LoginFragment">

    <ImageView
        android:id="@+id/carrot_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:src="@drawable/carrot"
        android:layout_gravity="center" />


    <TextView
        android:id="@+id/loging_txt"
        style="@style/medium_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_heading" />

    <TextView
        android:id="@+id/emailPass_txt"
        style="@style/hint_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email_pass_label" />

    <TextView
        android:id="@+id/email_txt"
        style="@style/hint_textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_label" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint" />

    <TextView
        android:id="@+id/password_txt"
        style="@style/hint_textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_label"
        style="@style/small_heading_textStyle"
        android:gravity="end"
        android:layout_margin="5dp"
        android:padding="8dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        style="@style/button_style_app"
        android:padding="18dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/rounded_button_background"
        android:layout_marginVertical="15dp"
        />

    <TextView
        android:id="@+id/already_acc_txt"
        style="@style/small_heading_textStyle"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/dont_account" />




</LinearLayout>