<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".checkout.OrderAcceptedFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/order_accepted" />

    <TextView
        android:id="@+id/order_label"
        style="@style/label_medium_textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/order_accepted_label"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/order_body"
        style="@style/label_grey_textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_body"
        android:textSize="15sp" />

    <TextView
        android:id="@id/order_body"
        style="@style/label_grey_textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_body_2"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tryAgain_btn"
        style="@style/button_style_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/track_order_btn"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/back_home_txt"
        style="@style/body_textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/back_home_txt"
        android:textSize="18dp" />


</LinearLayout>