<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".authentication.fragment.LocationFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background2"
        >

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="8dp"
            android:paddingStart="15dp"
            android:src="@drawable/back_icon" />


        <ImageView
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/map" />

        <TextView
            android:id="@+id/location_img"
            style="@style/medium_textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/location_label" />

        <TextView
            android:id="@+id/location_desc"
            style="@style/label_textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/location_desc" />

        <TextView
            style="@style/grey_textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/zone_label" />

        <EditText
            android:id="@+id/zone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="1.5dp"
            />

        <TextView
            style="@style/grey_textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/area_label"

            />

        <EditText
            android:id="@+id/area_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="1.5dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_btn"
            style="@style/button_style_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:background="@drawable/rounded_button_background"
            android:padding="18dp"
            android:text="@string/submit_btn"
            android:textAllCaps="false" />

    </LinearLayout>

    <me.ibrahimsn.lib.CirclesLoadingView
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_height="match_parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>