<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.RatingAndReviewFragment">

    <TextView
        android:id="@+id/rating_txt"
        style="@style/medium_heading_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/rating_heading" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:theme="@style/RatingBar" />

    <TextView
        android:id="@+id/review_txt"
        style="@style/product_name_label_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:text="@string/review_label"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/review_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="8dp"
        android:background="#DBFAE6"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/review_btn"
        style="@style/button_style_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_button_background"
        android:padding="18dp"
        android:text="@string/review_btn"
        android:textAllCaps="false" />


</LinearLayout>