<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/product_name"
        style="@style/label_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/product_name_cart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
       app:layout_constraintStart_toEndOf="@id/product_image"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="15dp"
        android:src="@drawable/capsicum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/product_desc"
        style="@style/label_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_qty"
        android:textSize="14sp"
        android:padding="10dp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/product_name"
        app:layout_constraintTop_toBottomOf="@id/product_name"

        />


    <TextView
        android:id="@+id/totalAmout"
        style="@style/product_name_label_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent "
        app:layout_constraintEnd_toStartOf="@id/payment_method_icon"
        tools:text="@string/product_price" />

    <ImageButton
        android:id="@+id/payment_method_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/right_arrow_icon"
        app:layout_constraintBottom_toBottomOf="@id/totalAmout"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E2E2E2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/product_image"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>